Bug 1289827 - Waiting in netmonitor -> timings isn't visible on dark theme. r=ntim
MozReview-Commit-ID: LlsmPfwZBhV

UltraBlame original commit: ae39b860cdd3d7e8bdefe782290a7813288ab5de

--- a/devtools/client/themes/netmonitor.css
+++ b/devtools/client/themes/netmonitor.css
@@ -11,7 +11,7 @@
   --timing-dns-color: rgba(223, 128, 255, 0.8); 
   --timing-connect-color: rgba(217, 102, 41, 0.8); 
   --timing-send-color: rgba(70, 175, 227, 0.8); 
-  --timig-wait-color: rgba(94, 136, 176, 0.8); 
+  --timing-wait-color: rgba(94, 136, 176, 0.8); 
   --timing-receive-color: rgba(112, 191, 83, 0.8); 
 
   --sort-ascending-image: url(chrome://devtools/skin/images/sort-arrows.svg#ascending);
